--- a/index.html
+++ b/index.html
@@ -7,24 +7,35 @@
   <!-- EmailJS -->
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
-    (function () {
-      emailjs.init("RhXbtQWtt0wuoDRoT");
-    })();
+    emailjs.init("RhXbtQWtt0wuoDRoT"); // ✅ Your public key
   </script>
 
-  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-<div class="container">
-  <h1>Will you be my Valentine? 💘</h1>
-
-  <div class="buttons">
-    <button id="yes">YES 💖</button>
-    <button id="no">NO 💔</button>
+  <div style="text-align:center; margin-top:100px;">
+    <h1>Will you be my Valentine? 💘</h1>
+    <button id="yes" style="font-size:24px; padding:15px 30px; cursor:pointer;">YES 💖</button>
   </div>
-</div>
 
-  <script src="script.js"></script>
+  <script>
+    const yesButton = document.getElementById("yes");
+
+    yesButton.addEventListener("click", () => {
+      emailjs.send(
+        "service_r9rb4tl",   // Your Service ID
+        "template_d7gy4rc",  // Your Template ID
+        {}                    // Empty object because your template has no variables
+      )
+      .then(() => {
+        alert("love has been sent! 🎉");
+      })
+      .catch((err) => {
+        console.error("EmailJS error:", err);
+        alert("Email failed. Check console for details.");
+      });
+    });
+  </script>
+
 </body>
 </html>
