--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <div class="container">
-    <h1>Will you be my Valentine? 💘</h1>
+    <h1>Will you be my only and forever Valentine? From now till the end of time? 💘</h1>
     <div class="buttons">
       <button id="yes">YES 💖</button>
       <button id="no">NO 😈</button>
