--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
       <button id="no">NO 😈</button>
     </div>
   </div>
+  
+  <video id="valentineVideo" controls style="display:none; width:100%; max-width:800px; margin:20px auto;">
+  <source src="video.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 
   <!-- JS -->
   <script src="script.js"></script>
