--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     </div>
   </div>
   
+  <div id="overlayText">I choose you. Always. ❤️</div>
+  
   <video id="valentineVideo" controls style="display:none; width:100%; max-width:800px; margin:20px auto;">
   <source src="video.mp4" type="video/mp4">
   Your browser does not support the video tag.
