--- a/index.html
+++ b/index.html
@@ -25,9 +25,15 @@
   
  <!-- <div id="overlayText">I choose you. Always. ❤️</div>  -->
   
-  <video id="valentineVideo" controls style="display:none; width:100%; max-width:800px; margin:20px auto;">
+<video 
+  id="valentineVideo"
+  autoplay
+  playsinline
+  controls
+  controlsList="nodownload noremoteplayback"
+  disablePictureInPicture
+>
   <source src="video.mp4" type="video/mp4">
-  Your browser does not support the video tag.
 </video>
 
   <!-- JS -->
