--- a/index.html
+++ b/index.html
@@ -1,43 +1,41 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Be My Valentine 💖</title>
+<meta charset="UTF-8">
+<title>Shaney's Special Pages</title>
+<link rel="stylesheet" href="style.css">
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="style.css">
-
-  <!-- EmailJS -->
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-  <script>
-    emailjs.init("RhXbtQWtt0wuoDRoT");
-  </script>
 </head>
 <body>
 
-  <div class="container">
-    <h1>Will you be my now & only and forever Valentine? From now till the end of time and beyond to the next? 💘</h1>
-    <div class="buttons">
-      <button id="yes">YES 💖</button>
-      <button id="no">NO 😈</button>
-    </div>
+  <audio id="bgMusic" loop>
+    <source src="intro.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+
+  <h1>Choose Your Destiny ❤️</h1>
+
+  <div class="option" onclick="location.href='valentine.html'">
+    Valentine's
+  </div>
+
+  <div class="option" onclick="location.href='birthday.html'">
+    Happy Birthday 
   </div>
   
- <!-- <div id="overlayText">I choose you. Always. ❤️</div>  -->
-  
 
-<video 
-  id="valentineVideo"
-  playsinline
-  controls
-  controlsList="nodownload noremoteplayback"
-  disablePictureInPicture
-  style="display:none;"
->
-  <source src="video.mp4" type="video/mp4">
-</video>
+<script>
+  const bgMusic = document.getElementById("bgMusic");
+  let musicStarted = false;
 
-  <!-- JS -->
-  <script src="script.js"></script>
+  // Play music on first click anywhere
+  document.body.addEventListener("click", () => {
+    if (!musicStarted) {
+      bgMusic.play().catch(err => console.log("Playback prevented:", err));
+      musicStarted = true;
+    }
+  }, { once: true }); // triggers only once
+</script>
+
+
 </body>
 </html>
